2018-01-28  Bruno Haible  <bruno@clisp.org>

	Enable another build variant on Solaris/i386.
	* Makefile.devel (multibuild-solaris-i386-cc): Depend on
	build-porting32-cc-debug_ari_asm.
	(multibuild-solaris-i386-gcc): Depend on
	build-porting32-gcc-debug_ari_asm.

2018-01-28  Bruno Haible  <bruno@clisp.org>

	Fix LOGTEST bug when using Sun C on i386.
	A cast from 'int' to 'bool' works like x -> x!=0 with the standard C99
	'bool' type, but not with the 'signed char' substitute we import from
	gnulib. Cf. also the commit from 2004-03-12.
	* intlog.d (I_I_logtest): Explicitly test for !=0.
	* ari_asm_*.d (and_test_loop_up, test_loop_up): Clarify return type.
	* ari_asm_*-macro.c: Regenerated.

2018-01-28  Bruno Haible  <bruno@clisp.org>

	Avoid hanging builds on Solaris, caused by "make check" in rawsock.
	* configure: Disable "make full-mod-check".

2018-01-28  Bruno Haible  <bruno@clisp.org>

	Fix mistake in an exception type (bug introduced on 2004-04-22).
	* constobj.d (O(type_socket_option)): Fix typo.

2018-01-27  Bruno Haible  <bruno@clisp.org>

	Add support for Linux in Microsoft WSL.
	* lispbibl.d (init_stream_osdeps): New declaration.
	* stream.d (is_wsl): New variable.
	(init_stream_osdeps): New function.
	(IS_EINVAL_EXTRA): On Microsoft WSL, treat EIO like EINVAL.
	* spvw.d (main): Invoke init_stream_osdeps.

2018-01-27  Bruno Haible  <bruno@clisp.org>

	Distribute the DEPENDENCIES and INSTALL.windows files.
	* Makefile.devel (SOURCES1): Add DEPENDENCIES, INSTALL.windows.

2018-01-27  Bruno Haible  <bruno@clisp.org>

	Update to the newest gnulib.
	Ran "make -f Makefile.devel build-aux-update gnulib-imported \
	&& make -f Makefile.devel build-prerequisites".
	* gllib/*: Update from gnulib.
	* glm4/*: Likewise.
	* aclocal.m4, src/configure, src/config.h.in: Regenerated.
	* modules/*/configure, modules/*/config.h.in: Regenerated.

2018-01-27  Bruno Haible  <bruno@clisp.org>

	Update Spanish translation.
	* po/es.po: Update from Francisco Javier Serrador.