@@ -1,5 +1,11 @@
 2018-01-28  Bruno Haible  <bruno@clisp.org>
 
+	Fix "reserving address range" warning on Solaris/i386.
+	* spvw.d (init_memory): Exclude the address range of immediate objects
+	from the address range that we reserve for heap-allocated objects.
+
+2018-01-28  Bruno Haible  <bruno@clisp.org>
+
 	Enable another build variant on Solaris/i386.
 	* Makefile.devel (multibuild-solaris-i386-cc): Depend on
 	build-porting32-cc-debug_ari_asm.
